avoid nav collapsing

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -36,6 +36,7 @@
     :host {
         position: static;
         width: 250px;
+        min-width: 250px;
         height: 100vh;
         padding: 0;
         ul {
